traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:10: error: object java.lang.String is not a value
    ecritMessage(String(cpt))
                 ^