traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt = 0
  while(!estPosFinale()){
    if(getY()==6){
      setPos(getX()+1,0)
    }
    else{
      setPos(getX(),getY+1)
    }
    cpt += 1
    ecritMessage(String(cpt))
  }
}

def estPosFinale():Boolean = {
  if(getX()==getMondeLargeur()-1 && getY()==getMondeHauteur-1){
    return true
  }
  else{
    return false
  }
}